		make it more difficult to downgrade I will wait a few days.
		Things to watch out for:
		   Messages in the logs about too many open files.
		   Systems not being called or called with wrong protols.
		Let me know if something goes wrong.
		Make sure you have a copy of the previous sources available
		if you need to downgrade.

	mbtask:
		Added debug logging to find some errors.


v0.37.00	26-Dec-2002 - 14-Jan-2003

	upgrade:
		In mbsetup 1.17.3 check if you have the XX,CM,IBN,IFC flags,
		which indicates your TCP/IP capabilities. This is only for
		systems that use TCP/IP, dialup systems should only have
		the XX,CM flags. Important: only protocols that you place
		in this entry are supported, so XX,CM,IBN will let your system
		only call binkp nodes.

	general:
		A new developer/translator joined the team, David Gonzalez.
		The settings to suppres some IP protocols (global and nodes)
		are removed, this behaviour must be set using nodelist flags 
		configuration.
		Debug logging for mail and news now have one setting, the M.
		Nodelist debug logging now uses the N character.
		In some makefiles the chown user.group syntax changed to
		user:group to follow the new POSIX syntax. Please let me know
		if you are using an older distribution that complains about
		this. This was needed for FreeBSD 4.7.
		Added Dutch template macro files. Updated English and German
		template macro files. Please remove old ones before installing.

	libs:
		The nodelist lookup functions are now in a separate library.
		This will give us easy implemtation of new nodelist formats
		and flags.
		Introduced a new file, ~/etc/nodelist.conf, this file will
		be used for nodelist lookup behaviour.
		The current looked-up nodelist strcuture has an extra field,
		the URL how that node must be contacted.

	mbcico:
		With binkp and EMSI sessions double received remote aka's are
		filtered.
		When calling ITN nodes, the default port is now 23.